[package]
name = "easy_template"
version = "0.1.0"
edition = "2021"
authors = ["ExplodingDragon <ExplodingFKL@gmail.com>"]

[dependencies]
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
serde = { version = "1.0" }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
indoc = "1.0"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[features]
json = ["serde", "serde_json"]
yaml = ["serde", "serde_yaml"]
