[package]
name = "zen_template"
version = "0.1.0"
edition = "2021"
authors = ["ExplodingDragon <ExplodingFKL@gmail.com>"]
license ="MIT"
description = "A simple template engine based on rust."
repository = "https://github.com/d7z-team/zen_template-rs"
keywords = ["template", "template-engine"]

[dependencies]
log = "0.4"
serde = { version = "1.0", optional = true }
serde_json = { version = "1.0", optional = true }
serde_yaml = { version = "0.9", optional = true }

[dev-dependencies]
serde = { version = "1.0" }
serde_json = { version = "1.0" }
serde_yaml = { version = "0.9" }
simple_logger = { version = "4" }
indoc = "1.0"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'

[features]
default = []
all = ["json", "yaml"]
json = ["serde", "serde_json"]
yaml = ["serde", "serde_yaml"]
